--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "compromise": "^11.2.1"
+  }
 }
