--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "compromise": "^11.2.1",
     "ember-ajax": "^2.4.1",
+    "ember-browserify": "^1.2.0",
     "ember-cli": "2.12.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -33,7 +34,6 @@
     "ember-data": "^2.12.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
-    "ember-require-module": "^0.1.3",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
@@ -44,6 +44,7 @@
   },
   "private": true,
   "dependencies": {
-    "compromise": "^11.2.1"
+    "compromise": "^11.2.1",
+    "d3": "^4.12.0"
   }
 }
